--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lisp/eaf"]
-	path = lisp/eaf
+[submodule "site-lisp/eaf"]
+	path = site-lisp/eaf
 	url = https://github.com/emacs-eaf/emacs-application-framework.git
